Fix: adición campo en migración Pedido + en componenentes de Pedido
